# pipewire-module-xrdp

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac
instfiles/: Makefile.am  load_pw_modules.sh  pipewire-xrdp.desktop  pipewire-xrdp.desktop.in
src/: Makefile.am  module-xrdp-pipewire.c  pw-cli_0358_mod.c
